# TestRaspiOS

./: CMakeLists.txt  Makefile  scr.gdb
CMakeModule/: raspi_toolchain.cmake
src/: AUX.h  GPIO.h  Serial.cpp  Serial.h  linker.ld  main.cpp  start.s  utility.h
